fix: fix overflow item box

--- a/client/src/components/ItemBox/ItemBox.css
+++ b/client/src/components/ItemBox/ItemBox.css
@@ -24,6 +24,8 @@
     flex-direction: column;
     justify-content: space-between;
     gap: 5vh;
+    overflow-wrap: break-word;
+    word-break: break-word;
 }
 
 @media (max-width: 600px){
